--- a/02_wbw_geomorphometric_analysis.ipynb
+++ b/02_wbw_geomorphometric_analysis.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Whitebox Workflows (WbW) for Geomorphometry"
+    "# Whitebox Workflows (WbW) for Geomorphometric Analysis"
    ]
   },
   {
