--- a/01_wbw_hydrological_analysis.ipynb
+++ b/01_wbw_hydrological_analysis.ipynb
@@ -5,7 +5,7 @@
    "id": "1e447fdc-1d37-46ba-8681-558c1af03b47",
    "metadata": {},
    "source": [
-    "# Whitebox Workflows for Python (WbW) Tutorial 1: Hydrological Analysis"
+    "# Whitebox Workflows (WbW) for Hydrological Analysis"
    ]
   },
   {
@@ -21,14 +21,7 @@
    "id": "09e5b554-3f05-496c-acc4-0ddaa0f70c65",
    "metadata": {},
    "source": [
-    "This tutorial is part of a series that includes:\n",
-    "\n",
-    "- [Tutorial 1: Hydrological Analysis](https://jblindsay.github.io/WhiteboxTutorials/WbW_tutorials/WbW_tutorial1.ipynb)\n",
-    "- [Tutorial 2: Geomorphometric Analysis](https://jblindsay.github.io/WhiteboxTutorials/WbW_tutorials/WbW_tutorial2.ipynb)\n",
-    "- [Tutorial 3: Mapping Building Footprints from LiDAR](https://jblindsay.github.io/WhiteboxTutorials/WbW_tutorials/WbW_tutorial3.ipynb)\n",
-    "- [Tutorial 4: Data visualization with Whitebox Workflows and matplotlib](https://jblindsay.github.io/WhiteboxTutorials/WbW_tutorials/WbW_visualization.ipynb)\n",
-    "\n",
-    "This tutorial is intended to demonstrate how to use the WbW geospatial analysis library to perform basic hydrological analysis. It will not cover all of the functionality related to hydrology contained within WbW. For more information, you may refer to the [user manual](https://www.whiteboxgeo.com/manual/wbw-user-manual/book/preface.html). **You may download a copy of the raw [Jupyter Notebooks](https://jupyter.org/) file (`*.ipynb`) [from here](https://github.com/jblindsay/jblindsay.github.io/blob/master/WhiteboxTutorials/WbW_tutorials/WbW_tutorial1.ipynb).**"
+    "This notebook is intended to demonstrate how to use the WbW geospatial analysis library to perform basic hydrological analysis. It will not cover all of the functionality related to hydrology contained within WbW. For more information, you may refer to the [user manual](https://www.whiteboxgeo.com/manual/wbw-user-manual/book/preface.html). **You may download a copy of the raw [Jupyter Notebooks](https://jupyter.org/) file (`*.ipynb`) [from here](https://github.com/jblindsay/jblindsay.github.io/blob/master/WhiteboxTutorials/WbW_tutorials/WbW_tutorial1.ipynb).**"
    ]
   },
   {
