implement wbw to 02.2

--- a/00_exploratory_data_analysis.ipynb
+++ b/00_exploratory_data_analysis.ipynb
@@ -1091,7 +1091,7 @@
     "\n",
     "# Plot 1 histogram\n",
     "sns.histplot(\n",
-    "    data=, \n",
+    "    data=df_filter1, \n",
     "    x='variable name', \n",
     "    hue='variable name', \n",
     "    discrete=1, \n",
@@ -1104,7 +1104,7 @@
     "\n",
     "# Plot 2 histogram\n",
     "sns.histplot(\n",
-    "    data= , \n",
+    "    data=df_filter2, \n",
     "    x='variable name', \n",
     "    hue='variable name', \n",
     "    discrete=1, \n",
