--- a/01.1_wbw_example_hydrological_analysis.ipynb
+++ b/01.1_wbw_example_hydrological_analysis.ipynb
@@ -54,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip install whitebox-workflows"
+    "pip install whitebox-workflows # type: ignore"
    ]
   },
   {
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip install whitebox-workflows -U"
+    "pip install whitebox-workflows -U # type: ignore"
    ]
   },
   {
