--- a/02_wbw_geomorphometric_analysis.ipynb
+++ b/02_wbw_geomorphometric_analysis.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip install whitebox-workflows"
+    "pip install whitebox-workflows # type: ignore"
    ]
   },
   {
@@ -61,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip install whitebox-workflows -U"
+    "pip install whitebox-workflows -U # type: ignore"
    ]
   },
   {
