--- a/01_wbw_hydrological_analysis.ipynb
+++ b/01_wbw_hydrological_analysis.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip install whitebox-workflows"
+    "pip install whitebox-workflows # type: ignore"
    ]
   },
   {
@@ -65,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip install whitebox-workflows -U"
+    "pip install whitebox-workflows -U # type: ignore"
    ]
   },
   {
@@ -372,7 +372,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "geo",
    "language": "python",
    "name": "python3"
   },
@@ -386,7 +386,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
