--- a/03_wbw_for_lidar.ipynb
+++ b/03_wbw_for_lidar.ipynb
@@ -39,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip install whitebox-workflows"
+    "pip install whitebox-workflows # type: ignore"
    ]
   },
   {
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip install whitebox-workflows -U"
+    "pip install whitebox-workflows -U # type: ignore"
    ]
   },
   {
