--- a/02.2_wbw_extracting_roadside_ditches.ipynb
+++ b/02.2_wbw_extracting_roadside_ditches.ipynb
@@ -38,7 +38,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "utils_path = Path(r'C:\\Users\\ah5766\\AppData\\Local\\anaconda3\\envs\\geo\\Lib\\site-packages')\n",
+    "sys.path.append(str(utils_path))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,6 +66,7 @@
     "import pathlib \n",
     "from datetime import datetime\n",
     "import matplotlib.pyplot as plt\n",
+    "#import utils as proj_utils\n",
     "\n",
     "%matplotlib widget\n"
    ]
@@ -67,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -932,8 +945,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "geo",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
