ipynb widget int

--- a/02.2_wbw_extracting_roadside_ditches.ipynb
+++ b/02.2_wbw_extracting_roadside_ditches.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,8 @@
     "import matplotlib.pyplot as plt\n",
     "#import utils as proj_utils\n",
     "\n",
-    "%matplotlib widget\n"
+    "%matplotlib notebook\n",
+    "#%matplotlib widget"
    ]
   },
   {
